--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -1,10 +1,39 @@
+header{
+    background-color: rgb(144, 117, 83);
+    height: 100px;
+ }
+
 body {
     background-color:beige;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 10px;
 }
 
-header{
-   background-color: rgb(144, 117, 83);
+
+.top-image{
+    background-image: url(homes.jpg);
+    background-position: center;
+    height: 900px;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+.top-image p{
+    background-color: rgba(0, 0, 0, 0.701);
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+.text-top{
+    color: aliceblue;
+    width: 50%;
+    font-size: xxx-large;
+}
+
 .navbar ul{
     list-style-type: none;
     background-color: rgb(144, 117, 83);
@@ -26,18 +55,24 @@ header{
 }
 
 .navbar li{
-    float: left
     text-align: center;
+    float: left;
+}
+
+.text-top{
+    justify-content: flex-end;
 }
 
 h1 {
     color: rgb(255, 255, 255);
 }
 
+
 h2{
-    color: rgb(155, 137, 109);
+    color: rgb(255, 255, 255);
 }
 
-h3{
-    color: (155, 137, 109); 
+
+footer{
+    float: left;
 }
