--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-header{
+header {
     background-color: rgb(144, 117, 83);
     height: 100px;
  }
@@ -13,7 +12,7 @@ body {
 }
 
 
-.top-image{
+.top-image {
     background-image: url(homes.jpg);
     background-position: center;
     height: 900px;
@@ -22,33 +21,20 @@ body {
     justify-content: center;
     align-items: center;
 }
-.top-image p{
+.top-image p {
     background-color: rgba(0, 0, 0, 0.701);
     border-radius: 10px;
     padding: 10px;
     text-align: center;
 }
 
-.text-top{
-    color: aliceblue;
+.text-top {
+    color: rgb(255, 255, 255);
     width: 50%;
     font-size: xxx-large;
 }
 
-.navbar ul{
-=======
-
-
-header{
-   background-color: rgb(144, 117, 83);
-    background-image: url(Home-medium.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
-
-   .navbar ul{
-    display: flex;
-    text-align: center;
->>>>>>> 07a1d1f5bf6457fccb8906fc138f67ed4f35e1bf
+.navbar ul {
     list-style-type: none;
     background-color: rgb(144, 117, 83);
     padding: 0px;
@@ -56,7 +42,7 @@ header{
     overflow: hidden;
 }
 
-.navbar a{
+.navbar a {
     color: white;
     text-decoration: none;
     padding: 15px;
@@ -64,32 +50,30 @@ header{
     text-align: center;
 }
 
-.navbar a:hover{
+.navbar a:hover {
     background-color: rgb(130, 105, 74)
 }
-<<<<<<< HEAD
 
-.navbar li{
+.navbar li {
     text-align: center;
     float: left;
 }
 
-.text-top{
+.text-top {
     justify-content: flex-end;
-=======
->>>>>>> 07a1d1f5bf6457fccb8906fc138f67ed4f35e1bf
 }
+
 
 h1 {
     color: rgb(255, 255, 255);
 }
 
 
-h2{
+h2 {
     color: rgb(255, 255, 255);
 }
 
 
-footer{
+footer {
     float: left;
 }
