--- a/Automated Tech/tech.css
+++ b/Automated Tech/tech.css
@@ -8,13 +8,9 @@
 .text-top {
     color: rgb(255, 255, 255);
     width: 50%;
-    font-size: xxx-large;
+    font-size: xx-large;
+    text-align: center;
 }
-
-
-
-
-
 
 .navbar ul{
     list-style-type: none;
@@ -39,4 +35,8 @@
 .navbar li{
     text-align: center;
     float: left;
+}
+
+h2 {
+    text-align: center;
 }
