--- a/Extra Rooms/extra.css
+++ b/Extra Rooms/extra.css
@@ -1,3 +1,16 @@
+.top-image p {
+    background-color: rgba(0, 0, 0, 0.701);
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+.text-top {
+    color: rgb(255, 255, 255);
+    width: 50%;
+    font-size: xx-large;
+}
+
 .navbar ul{
     list-style-type: none;
     background-color: rgb(144, 117, 83);
