--- a/Safety/amen.css
+++ b/Safety/amen.css
@@ -1,3 +1,18 @@
+.top-image p {
+    background-color: rgba(0, 0, 0, 0.701);
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+.text-top {
+    color: rgb(255, 255, 255);
+    width: 50%;
+    font-size: xx-large;
+    align-items: center;
+}
+
+
 .navbar ul{
     list-style-type: none;
     background-color: rgb(144, 117, 83);
@@ -21,4 +36,9 @@
 .navbar li{
     text-align: center;
     float: left;
+}
+
+.hi {
+    text-align: center;
+    flex-direction: row;
 }
