--- a/Automated Tech/tech.css
+++ b/Automated Tech/tech.css
@@ -1,15 +1,26 @@
-.top-image p {
+header {
+    background-color: rgb(144, 117, 83);
+    height: 100px;
+ }
+
+
+
+.text-top p {
+    display: flex;
     background-color: rgba(0, 0, 0, 0.701);
     border-radius: 10px;
     padding: 10px;
     text-align: center;
+    justify-content: center;
 }
 
 .text-top {
+    display: flex;
     color: rgb(255, 255, 255);
     width: 50%;
-    font-size: xx-large;
+    font-size: xxx-large;
     text-align: center;
+    justify-content: center;
 }
 
 .navbar ul{
@@ -33,10 +44,33 @@
 }
 
 .navbar li{
-    text-align: center;
+    display: flex;
     float: left;
 }
 
-h2 {
-    text-align: center;
+.tech{
+    display: flex;
+    flex-flow:row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+img {
+    max-width: 100%;
+    object-fit: cover;
+    height: 100%;
+}
+
+.top-image {
+    align-self: stretch;
+    width: 49%;
+}
+
+.tech:nth-of-type(even){
+    border: solid 1px red;
+}
+
+.tech:nth-of-type(even) > .text-top{
+    order: -1
 }
