--- a/Extra Rooms/extra.css
+++ b/Extra Rooms/extra.css
@@ -1,14 +1,22 @@
-.top-image p {
+header {
+    background-color: rgb(144, 117, 83);
+    height: 100px;
+ }
+
+.text-top p {
     background-color: rgba(0, 0, 0, 0.701);
     border-radius: 10px;
     padding: 10px;
     text-align: center;
+    justify-content: center;
 }
 
 .text-top {
     color: rgb(255, 255, 255);
     width: 50%;
     font-size: xx-large;
+    text-align: center;
+    justify-content: center;
 }
 
 .navbar ul{
@@ -35,3 +43,22 @@
     text-align: center;
     float: left;
 }
+
+.extra{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.class{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.classes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
