--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -2,9 +2,31 @@
 
 header{
    background-color: rgb(144, 117, 83);
-    background-image: url(Home-medium.jpg);
-    height: 100vh;
+    background-image: url(Homes.jpeg);
     background-repeat: no-repeat;
+    height: 100vh;
+}
+
+.top-image{
+    height: 900px;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.top-image p{
+    background-color: rgba(0, 0, 0, 0.701);
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+
+.text-top{
+    color: aliceblue;
+    width: 50%;
+    font-size: xx-large;
+}
 
    .navbar ul{
     display: flex;
@@ -27,6 +49,10 @@ header{
 .navbar a:hover{
     background-color: rgb(130, 105, 74)
 }
+
+.navbar li{
+    text-align: center;
+    float: left;
 }
 
 h1 {
@@ -35,6 +61,12 @@ h1 {
 
 h2{
     color: rgb(155, 137, 109);
+}
+
+footer{
+    float: left;
+    background-color: rgb(144, 117, 83);
+    
 }
 
 h3{
