--- a/Extra Rooms/extra.css
+++ b/Extra Rooms/extra.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgb(144, 117, 83);
+    background-color: rgb(176, 176, 189);
     height: 100px;
  }
 
@@ -21,7 +21,7 @@ header {
 
 .navbar ul{
     list-style-type: none;
-    background-color: rgb(144, 117, 83);
+    background-color:rgb(176, 176, 189);
     padding: 0px;
     margin: 0px;
     overflow: hidden;
@@ -36,7 +36,7 @@ header {
 }
 
 .navbar a:hover{
-    background-color: rgb(130, 105, 74)
+    background-color: rgb(151, 151, 169)
 }
 
 .navbar li{
@@ -62,3 +62,7 @@ header {
     align-items: center;
 }
 
+
+.bottom {
+    background-color: rgb(176, 176, 189);
+}
