--- a/Safety/amen.css
+++ b/Safety/amen.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgb(144, 117, 83);
+    background-color: rgb(176, 176, 189);
     height: 100px;
  }
 
@@ -23,7 +23,7 @@ header {
 
 .navbar ul{
     list-style-type: none;
-    background-color: rgb(144, 117, 83);
+    background-color: rgb(176, 176, 189);
     padding: 0px;
     margin: 0px;
     overflow: hidden;
@@ -38,7 +38,7 @@ header {
 }
 
 .navbar a:hover{
-    background-color: rgb(130, 105, 74)
+    background-color: rgb(151, 151, 169)
 }
 
 .navbar li{
@@ -50,4 +50,8 @@ header {
     display: flex;
     justify-content: space-around;
     
+}
+
+.bottom {
+    background-color: rgb(176, 176, 189);
 }
